--- a/bibliography.bib
+++ b/bibliography.bib
@@ -238,6 +238,14 @@
 	year={2011}
 }
 
+@inproceedings{liu2025grasp,
+	title={GRASP: Replace Redundant Layers with Adaptive Singular Parameters for Efficient Model Compression},
+	author={Liu, Kainan and Zhang, Yong and Cheng, Ning and Li, Zhitao and Wang, Shaojun and Xiao, Jing},
+	booktitle={Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing},
+	pages={26344--26359},
+	year={2025}
+}
+
 @article{filters2016pruning,
 	title={Pruning filters for efficient convnets},
 	author={Filters’Importance, Determine},
