--- a/glossary.tex
+++ b/glossary.tex
@@ -63,6 +63,12 @@
 	description={Low-Rank Adaptation}
 }
 
+\newglossaryentry{GRASP}
+{
+	name=GRASP,
+	description={Gradient-based Retention of Adaptive Singular Parameters}
+}
+
 \newglossaryentry{HSIC}
 {
 	name=HSIC,
