--- a/Methods_Experiments.tex
+++ b/Methods_Experiments.tex
@@ -6,12 +6,14 @@
 \label{sec:BlockImportanceAnalyses}
 \subsection{Block Selction Criterias}
 \subsubsection{Magnitude-Pruning}
+\label{sec:MagnitudePruning}
 In magnitude pruning \cite{han2015learning,filters2016pruning,lee2020layer}, the magnitudes of the weights of the individual components of a model are computed to serve as a proxy for their importance. The underlying assumption is that small weight magnitudes correspond to a low overall impact on the model performance, implying that model parts with lower weight magnitude should be removed first. The aggregated magnitude $M_i$ of a transformer block $B_i$ is defined as the total Frobenius norm of its constituent weight matrices $W \in B_i$. To account for the multiple sub-layers within a block, we compute the block-wise magnitude as
  \begin{equation} 
  	M_i = \sqrt{\sum_{W \in B_i} |W|_F^2} \quad \text{with} \quad |W|_F = \sqrt{\sum_j \sum_k |w_{jk}|^2} \quad.
  \end{equation} The block with the smallest magnitude $M_s = \min_i(M_i)$ is then identified as the primary candidate for removal or compression.
 
 \subsubsection{Representational Similarity Analysis}
+\label{sec:CKA}
 Another approach to identify redundant model components is to compare their input representations with their corresponding outputs representations \cite{men2024shortgpt}. If the transformation between the input and output is marginal, indicating that the specific component performs an approximate identity mapping, the model part is considered a candidate for removal. To quantify the similarity between the input and output features of a transformer block, the central kernel alignment (\gls{CKA}) metric \cite{kornblith2019similarity, pons2024effective} is employed. Let $X \in \mathbb{R}^{n\times d}$ denote the input and $Y \in \mathbb{R}^{n\times d}$ the output features which should be compared. First, the kernels $K$ and $L$ need to be chosen which are the inner product of the input $K=XX^T$ and the output $L=YY^T$ in the linear case. To ensure invariance to mean shifts, the centering matrix $H=I - \frac{1}{n} 11^T$ is applied. The final \gls{CKA} score is given by 
 \begin{equation}
 	\text{CKA}(K,L) = \frac{\text{HSIC}(K,L)}{\sqrt{\text{HSIC}(K,K) \text{HSIC}(L,L)}} \quad.
@@ -19,6 +21,7 @@ Another approach to identify redundant model components is to compare their inpu
 This calculation utilizes the Hilbert-Schmidt Independence Criterion (\gls{HSIC}) \cite{gretton2005measuring} $\text{HSIC}(K,L) = \frac{1}{(n-1)^2}\text{tr}(KHLH)$ \cite{davari2022reliability}.
 
 \subsubsection{Metric Based Selection}
+\label{sec:MetricBasedSelection}
 A third approach to identify the least important model components is to remove or compress all components individually, e.g. each transformer block, and compute for each configuration image quality metrics on a small reference dataset. Specifically, let $\{B_1, \dots, B_L\}$ denote the individual blocks of a transformer based model architecture. Each block is modified seperately leading to $L$ different model configuration $\{\{\hat{B}_1, \dots, B_L\}$, $\dots$, $\{B_1, \dots, \hat{B}_i, \dots,  B_L\}$, $\dots$,$\{B_1, \dots, \hat{B}_L\}\}$ where $\hat{B}_i$ indicates that the $i^\text{th}$ block is modified. For each model configuration the metrics are computed. In this work, we employ \gls{CMMD} and/or \gls{CLIP}-score to rank the importance of the individual model components. While \gls{CLIP} is used to evaluate the semantic prompt-image coherence, \gls{CMMD} serves as a measure for the general image quality and distributional fidelity. Since \gls{CMMD} and \gls{CLIP}-score produce values in different ranges and have an inverse optimization direction (minimization vs maximizaiton), for both metrics a separate ranking of the blocks is created where $r_{\text{CMMD},i}$ and  $r_{\text{CLiP},i}$ are the corresponding ranks of block $B_i$. The final importance score is obtained by computing the aggregated rank $r_{\text{final},i}$ from both metrics
 \begin{equation}
 	r_{\text{final},i} = r_{\text{CMMD},i} + r_{\text{CLIP},i} \quad.
@@ -29,6 +32,7 @@ In our linear progressive compression approach (see sec. \ref{sec:LinearProgress
 One challenge in structural model compression using metric based selection is that the importance of individual model components, e.g. transformer blocks, are normally determined in isolation meaning only one block is modified and the remaing parts of the model are fixed for computing the metrics.  However, in most cases, several components are compressed simultaneously. It cannot necessarily be assumed that removing the model components that individually had the least impact on model performance will also result in the best combination with the least reduction in image quality. In the following, methods to select the best subset of the model components are described and investigated in sec. \ref{label}.
 \label{sec:BlockSelectionAlgo}
 \subsubsection{Greedy Block Selection}
+\label{sec:GreedyBlockSelection}
 The greedy algorithm is applied alongside the metric-based selection criteria. It is an iterative procedure where the importance of all uncompressed blocks is determined to identify and compress the least critical one. Following this step, the block importance is re-evaluated for all remaining uncompressed blocks. Concretely, let the model consist of $L$ transformer blocks $B=\{B_1, \dots, B_L\}$. 
 In the first iteration, for all $L$ combinations of model configurations $\mathcal{M}^{(1)} = \{ (B \setminus \{B_i\}) \cup \{\hat{B}_i\} \mid 1 \leq i \leq L \}$ the metrics are computed and the best block $B_j$ is selected according to the ranking. Let $\bar{B}_j$ denote the compressed version of block $B_j$.
  In the second iteration, the metrics are re-computed for all $L-1$ uncompressed blocks
@@ -39,10 +43,12 @@ In the first iteration, for all $L$ combinations of model configurations $\mathc
   % $\{\{\hat{B}_1, \dots, B_L\}$, $\dots$, $\{B_1, \dots, \hat{B}_i, \dots,  B_L\}$, $\dots$,$\{B_1, \dots, \hat{B}_L\}\}$ 
   
 \subsubsection{Black-Box Optimization with Optuna}
+\label{sec:Optuna}
 Optuna \cite{akiba2019optuna} is an open-source hyperparameter optimization framework. It primarily leverages a tree-strucured parzen estimator \cite{bergstra2011algorithms}, a bayesian optimization algorithms, to search the space of all possible hyperparmeter settings. It partitions the observed hyperparameter configurations into promising and non-promising candidates based on a user defined objective function. By modeling these two groups using probability density functions it draws a new set of hyperparameters that belongs to the promising group  with high probability. Through this informed search the global optimum can be found much faster than with non-adaptive methods like random or grid search. For an in-depth descritption of the Optuna algorithm the reader is refered to the original paper \cite{akiba2019optuna} because this would go beyond the scope of this work. \\
 
 
 \subsubsection{TinyFusion}
+\label{sec:TinyFusion}
 The authors of TinyFusion \cite{fang2025tinyfusion} propose a learning based block selection method for pruning transformer based image generation models. They hypothesize that instead of focusing on the error/loss in image quality resulting from the model compression it is advantageous to focus on the recoverability capabilities of the compressed model meaning on the post-finetuning performance. Initially, the model is divided into $K$ subparts $\mathbf{\phi} = [\mathbf{\phi}_1,\dots, \mathbf{\phi}_K]$.  Each subpart consists of $M$ transformer blocks $\mathbf{\phi}_k = [\phi_{k1}, \dots, \phi_{kM}]$. Specifying the number $N$ of blocks retained in each subpart a local binary mask $\mathbf{m}_k \in \{0,1\}^M$ is introduced to determine the inclusion or exclusion of the individual blocks. A categorical distribution $p(\mathbf{m}_k)$ is assigned to each mask to model the probability for a specific combination of blocks to be removed. The goal is to jointly optimize the model and the categorical mask distributions.  To ensure that the sampling process of the mask remains differentiable during training the Gumbel-Softmax \cite{jang2016categorical} is utilized. The objective function for jointly optimizing weights and masks is given by
 \begin{equation}
 	\min_{\{p(\mathbf{m}_k)\}} \underbrace{\min_{\Delta \Phi} \mathbb{E}_{x, \{\mathbf{m}_k \sim p(\mathbf{m}_k)\}} \left[ \mathcal{L}(x, \Phi + \Delta \Phi, \{\mathbf{m}_k\}) \right]}_{\text{\textit{Recoverability: Post-Fine-Tuning Performance}}} 
@@ -183,11 +189,15 @@ Instead of specifying a specific rank $k$ we want to specify the percentage $c$ 
 		\label{fig:CompRemScheme}
 \end{figure}
 
+
+
 \subsection{Iteratively Repeated SVD Compression}
 \label{sec:IterativeRepeatedSVDCompression}
 In our final compression setup (see sec. \ref{sec:LinearProgressiveCompression}), individual transformer blocks are compressed and subsequently retrained multiple times using \gls{SVD}. Initially, an original weight matrix $W$ is decomposed into matrices $A$ and $B$ such as $W \approx AB$. During the subsequent retraining the matrices $A$ and $B$ are updated to $A_t$ and $B_t$. Therefore, $W \approx A_tB_t$ does not necessarily need to hold anymore w.r.t. the initial $W$ as the model adapts during training to the low rank constraint. Therefore, if the transformer block which originally contained the weight matrix $W$ is to be compressed once more, first, the current matrix $W_t = A_t B_t$ is reconstructed and afterward the \gls{SVD} algorithm is performed on it $W_t = U^{(2)} \Sigma^{(2)} V^{(2)^T}$. Similar to the initial step, after choosing a further reduced rank, the new smaller matrices $A^{(2)}$ and $B^{(2)}$ are constructed via $A^{(2)} = U^{(2)}_\text{red} \sqrt{\Sigma_\text{red}^{(2)}}$  and $B^{(2)} =  \sqrt{\Sigma_\text{red}^{(2)}}V_\text{red}^{(2)^T}$.  By following this procedure, reconstrucing $W^{(j)}_t = A^{(j)}_t B^{(j)}_t$, chosing a new smaller rank and obtaining the new $A^{(j+1)} = U^{(j+1)}_\text{red} \sqrt{\Sigma_\text{red}^{(j+1)}}$  and $B^{(j+1)} =  \sqrt{\Sigma_\text{red}^{(j+1)}}V_\text{red}^{(j+1)^T}$, a transformer block can be gradually compressed across multiple iterations.
 
 
+\subsection{GRASP}
+The method gradient-based retention of adaptive singular parameters \gls{GRASP} was originally proposed for compressing \gls{LLM}s \cite{liu2025grasp}. It is based on the idea of exploiting the low-rank structure of redundant layers in \gls{LLM}s. Moreover, the authors hypothesized that the standard \gls{SVD} approach where the singular values are selected solely based on their magnitude is not optimal because even small singular values may be important for the final task of the model and should be preserved. Therefore, they proposed a gradient-based selection instead of a magnitude-based selection for the singular values. Here, we adapted the scheme to Flux-dev to investigate its applicability to flow models. First, the candidate blocks for pruning are identified with a method from sec. ref{sec:BlockImportanceAnalyses}. Next, the identified blocks are compressed via \gls{SVD}. Afterwards, all parameters are frozen and only the singular values are treated as the parameters for which the gradients are calculated. We utilized a calibration dataset consisting of 200 images. For each image, the gradients of each singular value based on all timesteps 1 to 1000 were computed and summed together. Finally, the gradients for all 200 images were averaged to obtain a final estimate of the importance of each singular value. Instead of choosing the $k$ largest singular values, the $k$ singular values with the largest gradients were chosen for the low-rank matrix approximating the original weight matrix. 
 %Assuming the original weight matrix $W$ is already compressed $j^\text{th}$ times such that it is replaced with the two matrices $A^{(j)}$ and $B^{(j)}$. Note, that $A^{(j)}$ and $B^{(j)}$ were finetuned during the compression process which means   and it should be reduced once again. During retraining  $W \approx AB$
 %
 %
@@ -234,7 +244,7 @@ In contrast, the selection of intermediate features requires more care in the bl
 
 \
 
-\section{Distillation Algorithms}
+\section{Pruning Schedule}
 Various approaches can be chosen for structural model pruning. 
 \label{sec:distillationAlgos}
 \subsection{One-Shot Model Compression}
